# TwitchDropsMiner

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  RELEASE_NOTES.md  add_language_names.py  add_more_translations.py  docker-compose.yml  main.py  proxy_test.py  pyproject.toml  requirements.txt  setup_env.sh
.github/: FUNDING.yml
.github/scripts/: create_release.sh  extract_release_notes.sh  extract_version.sh  generate_release_notes.sh  get_previous_version.sh  revert_release.sh  update_version.sh  validate_semver.sh
.github/scripts/test/: README.md  test_github_output.sh  test_validate_semver.sh
.github/workflows/: ci.yml  docker-release.yml  docker.yml  github-release.yml  publish.yml  release.yml  validation.yml  version-release.yml
lang/: Dansk.json  Deutsch.json  English.json  Español.json  Français.json  Indonesian.json  Italiano.json  Nederlandse.json  Polski.json  Português.json  Română.json  Türkçe.json  Čeština.json  Русский.json  Українська.json  العربية.json  日本語.json  简体中文.json  繁體中文.json
src/: __init__.py  __main__.py  exceptions.py
src/api/: __init__.py  gql_client.py  http_client.py
src/auth/: __init__.py  auth_state.py
src/config/: __init__.py  client_info.py  constants.py  operations.py  paths.py  settings.py
src/core/: client.py
src/i18n/: __init__.py  translator.py
src/models/: __init__.py  benefit.py  campaign.py  channel.py  drop.py  game.py
src/services/: channel_service.py  inventory_service.py  maintenance.py  message_handlers.py  stream_selector.py  telegram_service.py  watch_service.py
src/utils/: __init__.py  async_helpers.py  backoff.py  cache.py  json_utils.py  rate_limiter.py  string_utils.py
src/web/: app.py  gui_manager.py
src/websocket/: __init__.py  pool.py  websocket.py
tests/: test_benefit_filter.py  test_client_filter.py  test_frontend_dom_safety.py  test_gql_watch_events.py  test_proxy_settings.py  test_settings_api.py  test_skip_badge_only_drops.py  test_skip_cosmetic_drops.py  test_translations.py  test_verify_proxy.py  test_wanted_games_filter.py  test_wanted_items.py
web/: index.html
web/static/: app.js  styles.css
(+11 files in other folders)
